Fix spacing in content and remove underline

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -19,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -33,14 +34,25 @@ input {
   justify-content: space-between;
 }
 
+.footer {
+  background-color: #eeeeee;
+}
+
 
 .left-links, .right-links {
   display: flex;
   list-style-type: none;
+  text-decoration: none;
+  gap: 8px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 5px;
 }
